--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "AKUNVIP - Netflix Creator 2.0",
+    "name": "AKUNVIP - Netflix DANA Creator 3.0",
     "description": "bla bla",
     "version": "1.0",
     "web_accessible_resources": [
@@ -9,14 +9,14 @@
                 "template.html"
             ],
             "matches": [
-                "https://*.netflix.com/*"
+                "https://*/*"
             ]
         }
     ],
     "content_scripts": [
         {
             "matches": [
-                "https://*.netflix.com/*"
+                "https://*/*"
             ],
             "js": [
                 "jquery.min.js",
