--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "AKUNVIP - Netflix DANA Creator 3.0",
+    "name": "AKUNVIP - NetflixDANA 4.0",
     "description": "bla bla",
     "version": "1.0",
     "web_accessible_resources": [
